========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2017-01-??

  - Created and test beancount.core.convert Posting and Position conversion
    functions.

  - Implemented Inventory.reduce() and test.

  - Deprecated Inventory.units(); use Inventory.reduce(convert.get_units)

  - Deprecated Inventory.cost(); use Inventory.reduce(convert.get_cost)

  - Deprecated Inventory.get_units() to Inventory.get_currency_units() in order to
    avoid future name confusion.

  - Deprecated Position.at_cost(); use convert.get_cost(position) instead.

  - Deprecated Position.get_cost(); use convert.get_cost(position) instead.

  - Deprecated b.c.interpolation.compute_cost_basis(); use
    Inventory.(pos for pos in positions if pos.cost is not
    None).reduce(convert.get_cost)
    instead.

  - Deprecated get_posting_weight(); use convert.get_weight() instead.

  - Removed b.ops.holdings.get_pholding_market_value(), which was unused.
    If you need a market-value function, use convert.get_value() instead.

  - Converted all the old code to these new converted functions.

  - Moved module beancount.ops.prices to beancount.core.prices, and added a
    deprecation warning.

  - Deprecated shell function PRICE(). Renamed it to GETPRICE() in order to
    avoid confusion.


2017-01-14

  - Fixed bug with generation of example that would produce an incorrect initial
    balance for banking accounts. The example test should have been broken. (No
    idea why this wasn't deteted earlier, probably by chance.)


2017-01-08

  - Completed "Intro to Double-Entry Accounting" doc.
    http://furius.ca/beancount/doc/intro

  - Added a --reverse/--descending flag to bean-extract to print the extracted
    entries in reverse order.


2016-12-17

  - Added a --title option to upload-to-sheets in order to conveniently set the
    document's title.
