@@ -5,11 +5,18 @@
   Weight: The cost basis or price of the position.
   Market Value: The units converted to a value via a price map.
 
-This module converts equivalently Position and Posting instances.
-(Note that we're specifically avoiding to create an import dependency on
-beancount.core.data in order to keep this module isolatable.)
+To convert an inventory's contents, simply use these functions in conjunction
+with Inventory.reduce(), like
 
-Functions named convert_* are used to convert to any currency.
+  cost_inv = inv.reduce(convert.get_cost)
+
+This module equivalently converts Position and Posting instances. Note that
+we're specifically avoiding to create an import dependency on
+beancount.core.data in order to keep this module isolatable, but it works on
+postings due to duck-typing.
+
+Function named get_*() are used to compute values from postings to their price currency.
+Functions named convert_*() are used to convert postings and amounts to any currency.
 """
 __copyright__ = "Copyright (C) 2013-2016  Martin Blais"
 __license__ = "GNU GPLv2"
@@ -100,9 +107,9 @@ def get_value(pos, price_map, date=None):
     """Return the market value of a Position or Posting.
 
     Note that if the position is not held at cost, this does not convert
-    anything, even if a price is available in the 'price_map'. We don't have a
-    target currency. If you're attempting to make such a conversion, see
-    get_value_in_currency().
+    anything, even if a price is available in the 'price_map'. We don't specify
+    a target currency here. If you're attempting to make such a conversion, see
+    convert_*() functions below.
 
     Args:
       pos: An instance of Position or Posting, equivalently.
@@ -110,112 +117,99 @@ def get_value(pos, price_map, date=None):
       date: A datetime.date instance to evaluate the value at, or None.
     Returns:
       An Amount, either with a succesful value currency conversion, or if we
-      could not convert the value, just the amount itself, with no modification.
-      This is designed so that you could reduce an inventory with this and not
-      lose any information silently in case of failure to convert (possibly due
-      to an empty price map). Compare the returned currency to that of the input
+      could not convert the value, just the units, unmodified. This is designed
+      so that you could reduce an inventory with this and not lose any
+      information silently in case of failure to convert (possibly due to an
+      empty price map). Compare the returned currency to that of the input
       position if you need to check for success.
     """
     assert isinstance(pos, Position) or type(pos).__name__ == 'Posting'
     units = pos.units
     cost = pos.cost
 
-    # Try to infer what the valuation currency should be.
-    value_currency = None
-    price_fallback = None
+    # Try to infer what the cost/price currency should be.
+    value_currency = (
+        (isinstance(cost, Cost) and cost.currency) or
+        (hasattr(pos, 'price') and pos.price and pos.price.currency) or
+        None)
 
-    if isinstance(cost, Cost):
-        # Currency is provided by the cost.
-        value_currency = cost.currency
-        price_fallback = cost.number
-        assert value_currency is not None
-
-    if not isinstance(pos, Position):
-        price = pos.price
-        if price is not None:
-            # Currency is provided by the price.
-            value_currency = price.currency
-            price_fallback = price.number
-            assert value_currency is not None
-
-    if value_currency is None:
-        # We failed to infer a currency; return the units.
-        value = units
-    else:
-        # Note: this is the same as convert_amount(); refactor.
-
-        # We have a currency; hit the price database.
+    if isinstance(value_currency, str):
+        # We have a value currency; hit the price database.
         base_quote = (units.currency, value_currency)
         _, price_number = prices.get_price(price_map, base_quote, date)
         if price_number is not None:
-            value = Amount(units.number * price_number, value_currency)
-        elif price_fallback is not None:
-            value = Amount(units.number * price_fallback, value_currency)
-        else:
-            value = units
+            return Amount(units.number * price_number, value_currency)
 
-    return value
+    # We failed to infer a conversion rate; return the units.
+    return units
 
 
-# FIXME: Remove the price fallback, it doesn't really make sense to do this, the
-# price database ought to be the single source of rates for conversions when
-# this is requested.
+def convert_position(pos, target_currency, price_map, date=None):
+    """Return the market value of a Position or Posting in a particular currency.
+
+    In addition, if the rate from the position's currency to target_currency
+    isn't available, an attempt is made to convert from its cost currency, if
+    one is available.
+
+    Args:
+      pos: An instance of Position or Posting, equivalently.
+      target_currency: The target currency to convert to.
+      price_map: A dict of prices, as built by prices.build_price_map().
+      date: A datetime.date instance to evaluate the value at, or None.
+    Returns:
+      An Amount, either with a succesful value currency conversion, or if we
+      could not convert the value, just the units, unmodified. (See get_value()
+      above for details.)
+    """
+    cost = pos.cost
+    value_currency = (
+        (isinstance(cost, Cost) and cost.currency) or
+        (hasattr(pos, 'price') and pos.price and pos.price.currency) or
+        None)
+    return convert_amount(pos.units, target_currency, price_map,
+                          date=date, via=[value_currency])
 
 
-# def convert_position(pos, target_currency, price_map, date=None):
-#     """Return the market value of a Position or Posting in a particular currency.
-#
-#     In addition, if the rate from units.currency to target_currency isn't
-#     available, an attempt is made to convert from cost.currency to
-#     target.currency, if available.
-#
-#     Args:
-#       pos: An instance of Position or Posting, equivalently.
-#       target_currency: The target currency to convert to.
-#       price_map: A dict of prices, as built by prices.build_price_map().
-#       date: A datetime.date instance to evaluate the value at, or None.
-#     Returns:
-#       An Amount, either with a succesful value currency conversion, or if we
-#       could not convert the value, just the amount itself, with no modification.
-#       (See get_value() above for details.)
-#     """
-#     units = pos.units
-#
-#     # First, attempt to convert directly. This should be the most
-#     # straightforward conversion.
-#     base_quote = (units.currency, target_currency)
-#     _, price_number = prices.get_price(price_map, base_quote, date)
-#     if price_number is not None:
-#         return Amount(units.number * price_number, target_currency)
-#     else:
-#         # If a price is unavailable, attempt to convert to its cost or price
-#         # currency.
-#         value = get_value(pos, price_map, date)
-#         if value.currency == units.currency:
-#             # If this conversion failed, just return the units.
-#             return units
-#         else:
-#             # We managed to convert to the cost/price currency; now this cannot
-#             # be the target currency, otherwise the above attempt would have
-#             # succeeded. Assert this.
-#
-#
-#
-#
-# ### we shouldn't fall back just yet to the static price here.
-#
-#             if value.currency != target_currency, (value.currency, target_currency)
-#
-#             # So now we'll attempt to convert the value currency to the target
-#             # currency.
-#             base_quote = (value.currency, target_currency)
-#             _, price_number = prices.get_price(price_map, base_quote, date)
-#             if price_number is not None:
-#                 return Amount(value.number * price_number, target_currency)
-#
-#     # Give up; don't return None, return units that can still be added to an
-#     # inventory. This is our failure signal.
-#     return units
+def convert_amount(amt, target_currency, price_map, date=None, via=None):
+    """Return the market value of an Amount in a particular currency.
 
+    In addition, if a conversion rate isn't available, you can provide a list of
+    currencies to attempt to synthesize a rate for via implieds rates.
 
-# def convert_amount(amt, target_currency, price_map, date=None):
+    Args:
+      amt: An instance of Amount.
+      target_currency: The target currency to convert to.
+      price_map: A dict of prices, as built by prices.build_price_map().
+      date: A datetime.date instance to evaluate the value at, or None.
+      via: A list of currencies to attempt to synthesize an implied rate if the
+        direct conversion fails.
+    Returns:
+      An Amount, either with a succesful value currency conversion, or if we
+      could not convert the value, the amount itself, unmodified.
+
+    """
+    # First, attempt to convert directly. This should be the most
+    # straightforward conversion.
+    base_quote = (amt.currency, target_currency)
+    _, rate = prices.get_price(price_map, base_quote, date)
+    if rate is not None:
+        # On success, just make the conversion directly.
+        return Amount(amt.number * rate, target_currency)
+    elif via:
+        assert isinstance(via, (tuple, list))
+
+        # A price is unavailable, attempt to convert via cost/price currency
+        # hop, if the value currency isn't the target currency.
+        for implied_currency in via:
+            if implied_currency == target_currency:
+                continue
+            base_quote1 = (amt.currency, implied_currency)
+            _, rate1 = prices.get_price(price_map, base_quote1, date)
+            if rate1 is not None:
+                base_quote2 = (implied_currency, target_currency)
+                _, rate2 = prices.get_price(price_map, base_quote2, date)
+                if rate2 is not None:
+                    return Amount(amt.number * rate1 * rate2, target_currency)
+
+    # We failed to infer a conversion rate; return the amt.
+    return amt
